@@ -1,0 +1,93 @@
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.047.
+use strict;
+use warnings;
+
+use 5.006;
+
+use ExtUtils::MakeMaker;
+
+my %WriteMakefileArgs = (
+  "ABSTRACT" => "Report what versions of things your distribution was built against",
+  "AUTHOR" => "Kent Fredric <kentnl\@cpan.org>",
+  "CONFIGURE_REQUIRES" => {
+    "ExtUtils::MakeMaker" => 0
+  },
+  "DISTNAME" => "Dist-Zilla-Plugin-MetaData-BuiltWith",
+  "LICENSE" => "perl",
+  "MIN_PERL_VERSION" => "5.006",
+  "NAME" => "Dist::Zilla::Plugin::MetaData::BuiltWith",
+  "PREREQ_PM" => {
+    "CPAN::Meta::Converter" => 0,
+    "Carp" => 0,
+    "Devel::CheckBin" => 0,
+    "Dist::Zilla::File::FromCode" => 0,
+    "Dist::Zilla::Role::ConfigDumper" => "4.101540",
+    "Dist::Zilla::Role::FileGatherer" => 0,
+    "Dist::Zilla::Role::FileMunger" => 0,
+    "Dist::Zilla::Role::MetaProvider" => 0,
+    "Dist::Zilla::Util::ConfigDumper" => 0,
+    "JSON::MaybeXS" => 0,
+    "Module::Data" => 0,
+    "Module::Runtime" => 0,
+    "Moose" => "2.0",
+    "MooseX::Types::Moose" => 0,
+    "YAML::Tiny" => 0,
+    "namespace::autoclean" => 0,
+    "strict" => 0,
+    "warnings" => 0
+  },
+  "TEST_REQUIRES" => {
+    "Dist::Zilla::Util::Test::KENTNL" => "1.003001",
+    "ExtUtils::MakeMaker" => 0,
+    "File::Spec" => 0,
+    "Path::Tiny" => 0,
+    "Test::DZil" => 0,
+    "Test::More" => "0.89",
+    "constant" => 0
+  },
+  "VERSION" => "1.004003",
+  "test" => {
+    "TESTS" => "t/*.t t/00-compile/*.t"
+  }
+);
+
+
+my %FallbackPrereqs = (
+  "CPAN::Meta::Converter" => 0,
+  "Carp" => 0,
+  "Devel::CheckBin" => 0,
+  "Dist::Zilla::File::FromCode" => 0,
+  "Dist::Zilla::Role::ConfigDumper" => "4.101540",
+  "Dist::Zilla::Role::FileGatherer" => 0,
+  "Dist::Zilla::Role::FileMunger" => 0,
+  "Dist::Zilla::Role::MetaProvider" => 0,
+  "Dist::Zilla::Util::ConfigDumper" => 0,
+  "Dist::Zilla::Util::Test::KENTNL" => "1.003001",
+  "ExtUtils::MakeMaker" => 0,
+  "File::Spec" => 0,
+  "JSON::MaybeXS" => 0,
+  "Module::Data" => 0,
+  "Module::Runtime" => 0,
+  "Moose" => "2.0",
+  "MooseX::Types::Moose" => 0,
+  "Path::Tiny" => 0,
+  "Test::DZil" => 0,
+  "Test::More" => "0.89",
+  "YAML::Tiny" => 0,
+  "constant" => 0,
+  "namespace::autoclean" => 0,
+  "strict" => 0,
+  "warnings" => 0
+);
+
+
+unless ( eval { ExtUtils::MakeMaker->VERSION(6.63_03) } ) {
+  delete $WriteMakefileArgs{TEST_REQUIRES};
+  delete $WriteMakefileArgs{BUILD_REQUIRES};
+  $WriteMakefileArgs{PREREQ_PM} = \%FallbackPrereqs;
+}
+
+delete $WriteMakefileArgs{CONFIGURE_REQUIRES}
+  unless eval { ExtUtils::MakeMaker->VERSION(6.52) };
+
+WriteMakefile(%WriteMakefileArgs);
