@@ -1,6 +1,22 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 1.004003
+ [Added / develop requires]
+ - Dist::Zilla::Plugin::Author::KENTNL::CONTRIBUTING 0.001003
+ - Dist::Zilla::Plugin::MetaYAML::Minimal
+ - Dist::Zilla::Plugin::RemovePrereqs::Provided
+ - English
+ - Software::License::Perl_5
+
+ [Changed / develop requires]
+ - Test::More 0.88 → 0.96
+
+ [Changed / develop suggests]
+ - Dist::Zilla::App::Command::bakeini 0.002000 → 0.002005
+ - Dist::Zilla::PluginBundle::Author::KENTNL 2.024001 → 2.025010
+
+ [Removed / develop requires]
+ - Dist::Zilla::Plugin::MetaYAML
 
 1.004002 2015-03-06T23:08:04Z
  [Added / develop requires]
@@ -487,4 +503,3 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
 0.01000216 2010-06-13T05:07:31Z
  [Added / runtime requires]
  - namespace::autoclean
-
